...
        typeId: String,
        barcodeId: String?,
        expirationDate: Date,
        percentLeft: Double
    ): Result<FoodItem> {
        return try {
            val fixme = "Test"
            val createBody = CreateFoodItemBody(userId = fixme, typeId = typeId, barcodeId = barcodeId, expirationDate = expirationDate.toString(), percentLeft = percentLeft)
            val response = foodItemInterface.createFoodItem("", createBody);
            if (response.isSuccessful && response.body()?.data != null) {
                Result.success(response.body()!!.data!!.foodItem)
            } else {
                val errorBodyString = response.errorBody()?.string()
...
